crates/relate-macros/tests/fail/define_both_unsupported.stderr
error: expected identifier
  --> tests/fail/define_both_unsupported.rs:21:5
   |
21 |     #[derive(Debug, Clone)]
   |     ^
